fixed horizontal scroll bar

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -679,6 +679,7 @@ nav {
 }
 
 .action-list-item {
+    margin-right: 0;
     padding: 0 15px 0 15px;
     display: flex;
     align-items: center;
